--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: staff-service-service
-        image: stefeena/staffservice:latest  # Replace with your Docker image name
+        image: stefeena/staff-service-servive:latest  # Replace with your Docker image name
         ports:
         - containerPort: 3000  # Change based on your application
 ---
